libbson 1.12.0
==============

It is my pleasure to announce libbson 1.12.0. This release deprecates all
MD5-related public APIs; they will be removed in the next major release.

Bug fixes:

  * Properly handle zero-length BSON binary values
  * Fix crash parsing Base64-encoded data in JSON when using libbson without
    libmongoc

Thanks to everyone who contributed to the development of this release.

  * Roberto C. Sánchez
  * A. Jesse Jiryu Davis
  * Kevin Albertson

Peace,

    A. Jesse Jiryu Davis


libbson 1.11.0
==============

It is my pleasure to announce libbson 1.11.0. This version adds the following
features and improvements:

  * All "destroy" functions such as bson_destroy or bson_reader_destroy now
    ignore a NULL argument.
  * Replace MD5 with FNV-1a hash to generate ObjectIds (for FIPS compliance).

Bug fixes:

  * Functions incorrectly marked with the "const" compiler attribute are now
    marked as "pure", fixes build error when link-time optimization is enabled.

Thanks to everyone who contributed to the development of this release.

  *  A. Jesse Jiryu Davis
  *  Kevin Albertson
  *  Roberto C. Sánchez

Peace,

    A. Jesse Jiryu Davis


libbson 1.10.3
==============

It is my pleasure to announce libbson 1.10.3. This release fixes a crash when
parsing binary data from JSON if using libbson as a standalone library, without
calling mongoc_init.

Peace,

    A. Jesse Jiryu Davis


libbson 1.10.2
==============

No change since 1.10.1; released to keep pace with libmongoc's version.

-- A. Jesse Jiryu Davis


libbson 1.10.1
==============

No change since 1.10.0; released to keep pace with libmongoc's version.

-- A. Jesse Jiryu Davis


libbson 1.10.0
==============

It is my pleasure to announce libbson 1.10.0. This version adds the following
features:

  * libbson and libmongoc are now maintained in the mongo-c-driver repository,
    although they are still built as separate libraries, and libbson can still
    be used without libmongoc.