@@ -223,6 +223,12 @@ bson_iter_init_find_case (bson_iter_t *iter,
                           const bson_t *bson,
                           const char *key);
 
+BSON_EXPORT (bool)
+bson_iter_init_from_data_at_offset (bson_iter_t *iter,
+                                    const uint8_t *data,
+                                    size_t length,
+                                    uint32_t offset,
+                                    int keylen);
 
 BSON_EXPORT (int32_t)
 bson_iter_int32 (const bson_iter_t *iter);
@@ -519,6 +525,9 @@ BSON_EXPORT (bool)
 bson_iter_visit_all (bson_iter_t *iter,
                      const bson_visitor_t *visitor,
                      void *data);
+
+BSON_EXPORT (uint32_t)
+bson_iter_offset (bson_iter_t *iter);
 
 
 BSON_END_DECLS
